Deploying the CEED website with mkdocs, version 1.0.4 from /home/aaustin/.local/lib64/python2.7/site-packages/mkdocs (Python 2.7)

--- a/ceed3am/index.html
+++ b/ceed3am/index.html
@@ -346,14 +346,15 @@
 <h4 id="virginia-tech">Virginia Tech</h4>
 <p><img alt="CEED Logo" src="../img/logo-150.png" /></p>
 <h3 id="overview">Overview</h3>
-<p>CEED will hold its third annual meeting August 6-8, 2019 at Virginia Tech
-(building/room to be determined). The goal of the meeting is to report on the
-progress in the center, deepen existing and establish new connections with ECP
-hardware vendors, ECP software technologies projects and other collaborators,
-plan project activities and brainstorm/work as a group to make technical
-progress. In addition to gathering together many of the CEED researchers, the
-meeting will include representatives of the ECP management, hardware vendors,
-software technology and other interested projects.</p>
+<p>CEED will hold its third annual meeting August 6-8, 2019 at Virginia Tech in
+<a href="https://www.google.com/maps?&amp;z=16.75&amp;q=37.232497,-80.425579">Goodwin Hall 155</a>.
+The goal of the meeting is to report on the progress in the center, deepen
+existing and establish new connections with ECP hardware vendors, ECP software
+technologies projects and other collaborators, plan project activities and
+brainstorm/work as a group to make technical progress. In addition to gathering
+together many of the CEED researchers, the meeting will include representatives
+of the ECP management, hardware vendors, software technology and other
+interested projects.</p>
 <h3 id="registration">Registration</h3>
 <p>If you plan to attend, <a href="https://forms.gle/1oH9W2aWp74H4BLAA">please <strong>register</strong> no later than <strong>June 30</strong></a>.
 The registration fee for the meeting is $60, payable at the door in cash or check upon arrival at
@@ -368,16 +369,16 @@ reserve a room at that rate, click
 <a href="https://reservations.travelclick.com/75607?groupID=2536216">here</a>.</p>
 <p>Other lodging options adjacent to campus:</p>
 <ul>
-<li><a href="https://www.marriott.com/hotels/travel/roarb-residence-inn-blacksburg-university/">Residence Inn Blacksburg-University by Marriott</a> - 10-15-minute walk</li>
-<li><a href="https://www.hyatt.com/en-US/hotel/virginia/hyatt-place-blacksburg-university/cltzb">Hyatt Place Blacksburg/University</a> - 10-15-minute walk</li>
-<li><a href="https://hotelblacksburg.com/">Main Street Inn</a> - 15-minute walk</li>
+<li><a href="https://www.marriott.com/hotels/travel/roarb-residence-inn-blacksburg-university/">Residence Inn Blacksburg-University by Marriott</a> - 10-minute walk</li>
+<li><a href="https://www.hyatt.com/en-US/hotel/virginia/hyatt-place-blacksburg-university/cltzb">Hyatt Place Blacksburg/University</a> - 10-minute walk</li>
+<li><a href="https://hotelblacksburg.com/">Main Street Inn</a> - 15-20-minute walk</li>
 </ul>
 <p>The following hotels are further away (30-35-minute walk) but are still
 relatively close to campus.  Attendees can drive (5 minutes; see below for
 information about parking) or take <a href="https://ridebt.org/">Blacksburg Transit</a>
-(BT) to get to the meeting.  The <a href="http://www.bt4uclassic.org/schedules/hwd.pdf">HWA and HWB bus routes</a>
+(BT) to get to the meeting.  The <a href="https://ridebt.org/routes-schedules?route=HWA">HWA</a> and <a href="https://ridebt.org/routes-schedules?route=HWB">HWB</a> bus routes (<a href="http://www.bt4uclassic.org/schedules/hwd.pdf">schedule PDF</a>)
 connect the stop nearest these hotels (<a href="https://www.google.com/maps?&amp;z=17.75&amp;q=37.225419+-80.444962">Plantation/Prices Fork</a>)
-with the one nearest the meeting (<a href="https://www.google.com/maps?&amp;z=17.75&amp;q=37.231440+-80.422008">Stanger/Old Turner</a>).
+with the one nearest the meeting (<a href="https://www.google.com/maps?&amp;z=17.75&amp;q=37.231440+-80.422008">Old Security Building/Stanger/Old Turner</a>).
 Note that BT will be operating on reduced service schedules during the summer break.</p>
 <ul>
 <li><a href="https://www.ihg.com/holidayinnexpress/hotels/us/en/blacksburg/bcbbg/hoteldetail">Holiday Inn Express &amp; Suites Blacksburg</a></li>
@@ -409,7 +410,7 @@ Garage</a>, from
 which it is about a 5-minute walk to the meeting venue.  There is a daily fee.
 Alternatively, one can acquire (also for a fee) a visitor's campus parking
 permit at the <a href="https://www.google.com/maps?&amp;z=17.75&amp;q=37.230686+-80.434072">Visitor Center</a>.
-The meeting is just a short walk up Stanger St. from
+Goodwin Hall is immediately adjacent to
 <a href="https://www.google.com/maps?&amp;z=17.75&amp;q=37.231803+-80.424694">Perry Street Lot 3</a>.
 Further information about parking on campus may be found
 <a href="https://parking.vt.edu/content/dam/parking_vt_edu/visitor-parking-info.pdf">here</a>.</p>
