--- a/ceed-2.0/index.html
+++ b/ceed-2.0/index.html
@@ -353,7 +353,6 @@ repository and the <a href="https://github.com/xsdk-project/installxSDK/tree/mas
 <th>Platform</th>
 <th>Architecture</th>
 <th>Spack Configuration</th>
-<th></th>
 </tr>
 </thead>
 <tbody>
@@ -361,43 +360,41 @@ repository and the <a href="https://github.com/xsdk-project/installxSDK/tree/mas
 <td><strong>Mac</strong></td>
 <td><code>darwin-highsierra-x86_64</code></td>
 <td><a href="../spack/ceed2-darwin-highsierra-x86_64-packages.yaml">packages</a> <i class="fa fa-cloud-download"></i></td>
-<td></td>
 </tr>
 <tr>
 <td><strong>Linux</strong> (RHEL7)</td>
 <td><code>linux-rhel7-x86_64</code></td>
 <td><a href="../spack/ceed2-linux-rhel7-x86_64-packages.yaml">packages</a> <i class="fa fa-cloud-download"></i></td>
-<td></td>
 </tr>
 <tr>
 <td><strong>Linux</strong> (Ubuntu)</td>
 <td><code>ubuntu18.10-x86_64</code></td>
 <td><a href="../spack/ceed2-ubuntu18.10-packages.yaml">packages</a> <i class="fa fa-cloud-download"></i></td>
-<td></td>
 </tr>
 <tr>
 <td><strong>Cori</strong> (NERSC)</td>
 <td><code>cray-cnl9-haswell</code></td>
 <td><a href="../spack/ceed2-cori-packages.yaml">packages</a> <i class="fa fa-cloud-download"></i></td>
-<td></td>
 </tr>
 <tr>
 <td><strong>Theta</strong> (ALCF)</td>
 <td><code>cray-CNL-mic_knl</code></td>
 <td><a href="../spack/ceed2-theta-packages.yaml">packages</a> <i class="fa fa-cloud-download"></i></td>
-<td></td>
 </tr>
 <tr>
 <td><strong>Pascal</strong> (LLNL)</td>
 <td><code>toss_3_x86_64_ib</code></td>
 <td><a href="../spack/ceed2-pascal-packages.yaml">packages</a> <i class="fa fa-cloud-download"></i>  &nbsp; <a href="../spack/ceed2-pascal-compilers.yaml">compilers</a> <i class="fa fa-cloud-download"></i></td>
-<td></td>
 </tr>
 <tr>
 <td><strong>Lassen</strong> (LLNL)</td>
 <td><code>linux-rhel7-ppc64le</code></td>
 <td><a href="../spack/ceed2-lassen-packages.yaml">packages</a> <i class="fa fa-cloud-download"></i>  &nbsp; <a href="../spack/ceed2-lassen-compilers.yaml">compilers</a> <i class="fa fa-cloud-download"></i></td>
-<td></td>
+</tr>
+<tr>
+<td><strong>Summit</strong> (ORNL)</td>
+<td><code>linux-rhel7-ppc64le</code></td>
+<td><a href="../spack/ceed2-summit-packages.yaml">packages</a> <i class="fa fa-cloud-download"></i></td>
 </tr>
 </tbody>
 </table>
@@ -1225,6 +1222,20 @@ with <code>module unload xalt</code>. Otherwise suite-sparse fails to build.</p>
     providers:
       mpi: [mpich]
     compiler: [gcc@8.2.0]
+</code></pre>
+
+<h3 id="building-at-olcf">Building at OLCF</h3>
+<h4 id="summit">Summit</h4>
+<p>The file <a href="../spack/ceed2-summit-packages.yaml">ceed2-summit-packages.yaml</a> is an example of a
+<code>packages.yaml</code> file for the Summit system at <a href="https://www.olcf.ornl.gov">OLCF</a>.</p>
+<p>The packages.yaml file gives updated locations for spectrum-mpi and cuda. Then one has to make sure other modules like xalt are not loaded because xalt provides a conflicting version of "ld" which breaks the build. One may have to first install gcc version 6.5.0 and configure it in spack as a compiler.  Then one can compile ceed and dependencies using netlib-lapack as the blas and lapack provider. Here are the commands to do the full compile:</p>
+<pre><code class="sh">git clone https://github.com/spack/spack
+source spack/share/spack/setup-env.sh
+cp packages.yaml spack/etc/spack/
+module purge
+spack install gcc@6.5.0 %gcc
+spack compiler find
+spack install ceed %gcc ^netlib-lapack
 </code></pre>
 
 <h3 id="installing-cuda">Installing CUDA</h3>
