Deploying the CEED website with mkdocs, version 1.0.4 from /home/aaustin/.local/lib64/python2.7/site-packages/mkdocs (Python 2.7)

--- a/index.html
+++ b/index.html
@@ -356,7 +356,6 @@ The CEED software will also include optimized assembly support for low-order met
     <ul class="nav bs-sidenav">
     <li class="main"><a href="../news/">What's New?</a> </li>
 
-       <li> <a href="../news/#software-release-mfem-v40">&#9658;&nbsp;MFEM v4.0 released</a> </li>
        <li> <a href="./news/#third-ceed-annual-meeting-in-virginia-tech">&#9658;&nbsp;CEED annual meeting</a> </li>
        <li> <a href="./news/#software-release-ceed-v20">&#9658;&nbsp;CEED v2.0 released</a> </li>
        <li> <a href="./news/#software-release-libceed-v04">&#9658;&nbsp;libCEED-0.4 released</a> </li>
@@ -364,6 +363,7 @@ The CEED software will also include optimized assembly support for low-order met
        <li> <a href="./news/#ceed-researchers-at-nahomcon19">&#9658;&nbsp;CEED @ NAHOMCon19</a> </li>
        <li> <a href="./news/#ceed-minisymposiums-at-siam-cse19">&#9658;&nbsp;CEED @ SIAM CSE19</a> </li>
        <li> <a href="http://ceed.exascaleproject.org/fms/">&#9658;&nbsp;FMS v0.1 released</a> </li>
+       <li> <a href="../news/#software-release-mfem-v33">&#9658;&nbsp;MFEM v3.4 released</a> </li>
        <li> <a href="../news/">More updates...</a> </li>
     <hr style="background-color:white; height:20px; margin-left:-1px;  margin-right:-1px; margin-top:15px; margin-bottom:10px " />
     <li class="main" style="padding:0"><a href="https://exascaleproject.org/exascale-computing-project/">ECP Co-Design</a> </li>
@@ -439,7 +439,6 @@ The CEED software will also include optimized assembly support for low-order met
         <script src="./js/highlight.pack.js"></script>
         <script src="./js/base.js"></script>
         <script src="./js/retina.min.js"></script>
-        <script src="./search/require.js"></script>
-        <script src="./search/search.js"></script>
+        <script src="search/main.js"></script>
     </body>
 </html>
