--- a/pubs/index.html
+++ b/pubs/index.html
@@ -375,18 +375,20 @@
 <h3 id="publications">Publications</h3>
 <h4 id="2019">2019</h4>
 <ol>
+<li>H. Hajduk, D. Kuzmin, Tz. Kolev and R. Abgrall, <a href="https://eldorado.tu-dortmund.de/bitstream/2003/37961/1/Ergebnisbericht%20Nr.%20598.pdf">Matrix-free subcell residual distribution for Bernstein finite elements: Low-order schemes and FCT</a>, <em>submitted</em>, <strong>2019</strong>.</li>
+<li>V. Dobrev, Tz. Kolev, C. Lee, V. Tomov and P. Vassilevski, <a href="https://arxiv.org/abs/1801.08914">Algebraic Hybridization and Static Condensation with Application to Scalable H(div) Preconditioning</a>, <em>SISC</em>, to appear, <strong>2019</strong>.</li>
+<li>J. Ceverny, V. Dobrev, and Tz. Kolev, <a href="http://arxiv.org/abs/1905.04033">Non-Conforming Mesh Refinement For High-Order Finite Elements</a>, <em>SISC</em>, to appear, <strong>2019</strong>.</li>
+<li>V. Dobrev, P. Knupp, Tz. Kolev, and V. Tomov, <a href="https://link.springer.com/chapter/10.1007/978-3-030-13992-6_16">Towards Simulation-Driven Optimization of High-Order Meshes by the Target-Matrix Optimization Paradigm</a>, in: Roca X., Loseille A. (eds) <em>27th International Meshing Roundtable. IMR 2018. Lecture Notes in Computational Science and Engineering, vol 127.</em>, pp. 285-302, Springer, <strong>2019</strong>.</li>
 <li>I. Masliah, A. Abdelfattah, A. Haidar, S. Tomov, M. Baboulin, J. Falcou, and J Dongarra, <a href="https://www.sciencedirect.com/science/article/pii/S0167819118301091">Algorithms and optimization techniques for high-performance matrix-matrix multiplications of very small matrices</a>, Parallel Computing, vol. 81, pp. 1-21, <strong>2019</strong>.</li>
+<li>V. Dobrev, P. Knupp, Tz. Kolev, K. Mittal, V. Tomov, <a href="https://epubs.siam.org/doi/abs/10.1137/18M1167206">The Target-Matrix Optimization Paradigm for High-Order Meshes</a>, <em>SIAM J. Sci. Comp.</em>, 41(1), pp. B50–B68, <strong>2019</strong>.</li>
 </ol>
 <hr />
 <h4 id="2018">2018</h4>
 <ol>
 <li>P. Bello-Maldonado and P. Fischer, <a href="">Scalable Low-Order Finite Element Preconditioners for High-Order Spectral Element Poisson Solvers</a>, submitted, <strong>2018</strong>.</li>
-<li>J. Ceverny, V. Dobrev, and Tz. Kolev, <a href="">Non-Conforming Mesh Refinement For High-Order Finite Elements</a>, submitted, <strong>2018</strong>.</li>
 <li>A. Karakus, N. Chalmers, J.S. Hesthaven and T. Warburton, <a href="https://arxiv.org/abs/1805.02082">Discontinuous Galerkin Discretizations of the Boltzmann Equations in 2D: semi-analytic time stepping and absorbing boundary layers</a>, submitted, <strong>2018</strong>.</li>
-<li>V. Dobrev, P. Knupp, Tz. Kolev, and V. Tomov, <a href="">Towards Simulation-Driven Optimization of High-Order Meshes by the Target-Matrix Optimization Paradigm</a>, <em>27th International Meshing Roundtable, Oct 1-8, 2018, Albuquerque</em>, submitted, <strong>2018</strong>.</li>
 <li>A. Haidar, S. Tomov, and J. Dongarra, <a href="">Optimizing GPU Kernels for Irregular Batch Workloads: A Case Study for Cholesky Factorization</a>, HPEC'18, submitted, <strong>2018</strong>.</li>
 <li>A. Karakus, N. Chalmers, K. Swirydowicz, T. Warburton, <a href="https://arxiv.org/abs/1801.00246">GPU Acceleration of a High-Order Discontinuous Galerkin Incompressible Flow Solver</a>, submitted, <strong>2018</strong>.</li>
-<li>V. Dobrev, P. Knupp, Tz. Kolev, K. Mittal, V. Tomov, <a href="">The Target-Matrix Optimization Paradigm for High-Order Meshes</a>, in review, <strong>2018</strong>.</li>
 <li>A. Barker, V. Dobrev, J. Gopalakrishnan and T. Kolev, <a href="https://doi.org/10.1137/16M1104780">A scalable preconditioner for a primal discontinuous Petrov-Galerkin method</a>, <em>SIAM J. Sci. Comp.</em>, 40(1), pp. B32-B58, <strong>2018</strong>.</li>
 <li>R. Anderson, V. Dobrev, Tz. Kolev, R. Rieben and V. Tomov, <a href="https://doi.org/10.1137/17M1116453">High-Order Multi-Material ALE Hydrodynamics</a>,  <em>SIAM J. Sci. Comp.</em>, 40(1):B32-B58, <strong>2018</strong>.</li>
 <li>V. Dobrev, Tz. Kolev, D. Kuzmin, R. Rieben and V. Tomov, <a href="https://doi.org/10.1016/j.jcp.2017.12.012">Sequential limiting in continuous and discontinuous Galerkin methods for the Euler equations</a>, Journal of Computational Physics,
@@ -397,7 +399,6 @@
 <ol>
 <li>K. Swirydowicz, N. Chalmers, A. Karakus, T. Warburton, <a href="https://arxiv.org/abs/1711.00903">Acceleration of tensor-product operations for high-order finite element methods</a>, submitted, <strong>2017</strong></li>
 <li>J. Solberg, E. Merzari, H. Yuan, A. Obabko and P. Fischer, S. Lee, J. Lai, M. Delgado, S. J. Lee, and Y. Hassan, <a href="">High-Fidelity Simulation of Flow Induced Vibrations in Helical Steam Generators for Small Modular Reactors</a>, <strong>Best Paper Award</strong> at <em>The 17th International Topical Meeting on Nuclear Reactor Thermal Hydraulics (NURETH-17)</em>, September, <strong>2017</strong>.</li>
-<li>V. Dobrev, Tz. Kolev, C. Lee, V. Tomov and P. Vassilevski, <a href="https://arxiv.org/abs/1801.08914">Algebraic Hybridization and Static Condensation with Application to Scalable H(div) Preconditioning</a>, submitted, <strong>2017</strong>.</li>
 <li>S. Patel, P. Fisher, M. Min, and A. Tomboulides, <a href="http://meetings.aps.org/Meeting/DFD17/Session/D32.6">A Characteristic-based, spectral element method for moving-domain problems</a>, <em>J. Sci. Comp.</em>, submitted, <strong>2017</strong>.</li>
 <li>I. Masliah, A. Abdelfattah, A. Haidar, S. Tomov, M. Baboulin, J. Falcou, and J. Dongarra, <a href="">Algorithms and optimization techniques for high-performance matrix-matrix multiplications of very small matrices</a>, <em>Parallel Computing (PARCO)</em>, submitted, <strong>2017</strong>.</li>
 <li>K. Raffenetti et. al, P. Fischer, M. Min, and P. Balaji, <a href="">Why is MPI so slow? Analyzing the fundamental limits in implementing MPI-3.1</a>, accepted, <em>SC'17</em>, <strong>2017</strong>.</li>
