Deploying the CEED website with mkdocs, version 1.0.4 from /home/aaustin/.local/lib64/python2.7/site-packages/mkdocs (Python 2.7)

--- a/ceed3am/index.html
+++ b/ceed3am/index.html
@@ -360,26 +360,207 @@ interested projects.</p>
 The registration fee for the meeting is $60, payable at the door in cash or check upon arrival at
 the meeting. The fee covers snacks and refreshments each day as well as a CEED T-shirt.</p>
 <h3 id="meeting-agenda">Meeting Agenda</h3>
-<p>This schedule is <strong>tentative</strong> and subject to change.  A more complete schedule
-will be posted closer to the meeting date.</p>
 <h4 id="tuesday-august-6">Tuesday, August 6</h4>
-<ul>
-<li>Project overview</li>
-<li>Collaborative discussion</li>
-<li>Meeting dinner</li>
-</ul>
+<table>
+<thead>
+<tr>
+<th>Time</th>
+<th>Activity</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>8:00-8:30</td>
+<td><strong>Coffee &amp; Welcome</strong> <br> Tim Warburton (VT) and Tim Germann (LANL)</td>
+</tr>
+<tr>
+<td>8:30-9:00</td>
+<td><strong>CEED Overview</strong> <br> Tzanio Kolev (LLNL)</td>
+</tr>
+<tr>
+<td>9:00-9:30</td>
+<td><strong>Finite Element Thrust Overview</strong> <br> Veselin Dobrev (LLNL)</td>
+</tr>
+<tr>
+<td>9:30-10:00</td>
+<td><strong>High-Order Solver Developments at UIUC</strong> <br> Paul Fischer (UIUC)</td>
+</tr>
+<tr>
+<td>10:00-10:30</td>
+<td><strong>Coffee Break</strong></td>
+</tr>
+<tr>
+<td>10:30-11:00</td>
+<td><strong>libParanumal Progress Update</strong> <br> Tim Warburton (VT) <br> <em>libParanumal has proved capable of running SEM incompressible calculations in weak scaling mode on at least half of the GPUs on Summit at 90% efficiency. In this talk we will discuss ongoing efforts to reduce the number of degrees of freedom required to stay in the weak scaling regime.</em></td>
+</tr>
+<tr>
+<td>11:00-11:30</td>
+<td><strong>OCCA Updates</strong> <br> David Medina (Occalytics)</td>
+</tr>
+<tr>
+<td>11:30-12:00</td>
+<td><strong>Supporting Complex Geometry RF Adaptive Simulations</strong> <br> Mark Shephard (RPI)</td>
+</tr>
+<tr>
+<td>12:00-12:30</td>
+<td><strong>Applications Thrust Overview</strong> <br> Misun Min (ANL)</td>
+</tr>
+<tr>
+<td>12:30-1:30</td>
+<td><strong>Lunch</strong></td>
+</tr>
+<tr>
+<td>1:30-2:00</td>
+<td><strong>Accelerating Numerical Methods for a Next Generation Multi-Physics Code</strong> <br> Arturo Vargas (LLNL) <br> <em>MARBL is LLNL’s next generation multi-physics code for simulating high energy density physics. A distinguishing feature of this code is the modular CS infrastructure (Axom), and choice of high order numerical methods. The choice of high order schemes leads to higher arithmetic intensity per data access, a trait favored by modern computing processors. In this talk, we provide an overview of recent developments within the Arbitrary Lagrangian-Eulerian package, Blast, and focus on our adoption of programming models and algorithmic tailoring to leverage next gen super computers. This work was performed under the auspices of the U.S. Department of Energy by Lawrence Livermore National Laboratory under Contract DE-AC52-07NA27344. LLNL-ABS-774160.</em></td>
+</tr>
+<tr>
+<td>2:00-2:30</td>
+<td><strong>Urban</strong> <br> Aleks Obabko (ANL)</td>
+</tr>
+<tr>
+<td>2:30-3:00</td>
+<td><strong>ExaConstit:  Towards an Exascale Crystal Plasticity FEM Code</strong> <br> Robert Carson (LLNL) <br> <em>An overview of ExaConstit, a new crystal plasticity code built upon the MFEM framework, will be given. It’s being designed as a component of the Exascale Additive Manufacturing Project (ExaAM) to couple microstructure development and local property analysis with process simulation. Initial results of ExaConstit being applied to a generated microstructure from AM processing condition will be discussed. A strong scaling study of ExaConstit on Sierra/Summit like machines will also be presented.</em></td>
+</tr>
+<tr>
+<td>3:00-3:30</td>
+<td><strong>ExaWind</strong> <br> Robert Knaus (SNL)</td>
+</tr>
+<tr>
+<td>3:30-4:00</td>
+<td><strong>Coffee Break &amp; Group Photo</strong></td>
+</tr>
+<tr>
+<td>4:00-4:30</td>
+<td><strong>Software Thrust &amp; libCEED Overview</strong> <br> Jed Brown (CU Boulder)</td>
+</tr>
+<tr>
+<td>4:30-5:00</td>
+<td><strong>libCEED under PETSc: Current and Future Efforts</strong> <br> Oana Marin (ANL) <br> <em>We describe benefits of libCEED to PETSc and aspects to be pursued, from integration under complex unstructured meshes, to machine learning coupling and efficient support for research and implementation of matrix free preconditioners.</em></td>
+</tr>
+<tr>
+<td>5:00-5:30</td>
+<td><strong>Hardware Thrust &amp; MAGMA</strong> <br> Stanmire Tomov (UTK)</td>
+</tr>
+<tr>
+<td>5:30-6:00</td>
+<td><strong>Aurora:  Argonne's Exascale System</strong> <br> Scott Parker (ANL) <br> <em>Presentation and discussion of the publicly available information on the Aurora system and approaches to preparing applications.</em></td>
+</tr>
+<tr>
+<td>7:00-9:00</td>
+<td><strong>Conference Dinner</strong> <br> <em>Location TBD</em></td>
+</tr>
+</tbody>
+</table>
 <h4 id="wednesday-august-7">Wednesday, August 7</h4>
-<ul>
-<li>Guest speakers and vendor/tutorial talks</li>
-<li>Collaborative discussion</li>
-<li>Excursion (hike to the Cascades)</li>
-</ul>
+<table>
+<thead>
+<tr>
+<th>Time</th>
+<th>Activity</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>8:00-8:30</td>
+<td><strong>Coffee</strong></td>
+</tr>
+<tr>
+<td>8:30-9:00</td>
+<td><strong>VTK-m Plans for Higher-Order Elements</strong> <br> Hank Childs (Oregon)</td>
+</tr>
+<tr>
+<td>9:00-9:30</td>
+<td><strong>Devil Ray:  Ray Tracing High Order Meshes for Visualization</strong> <br> Matt Larsen (LLNL) <br> <em>This talk will outline our efforts to develop a portable ray tracing library for high-order meshes. Devil Ray is focused on visualization tasks such as iso-surface and volume rendering.</em></td>
+</tr>
+<tr>
+<td>9:30-10:00</td>
+<td><strong>Parallel I/O in MFEM Using ADIOS2</strong> <br> William Godoy (ORNL) <br> <em>This talk provides a brief overview of the integration efforts and available features of ADIOS2 as the parallel I/O solution to MFEM for code coupling, in-situ visualization, and scalable file I/O.</em></td>
+</tr>
+<tr>
+<td>10:00-10:30</td>
+<td><strong>Coffee Break</strong></td>
+</tr>
+<tr>
+<td>10:30-11:00</td>
+<td><strong>Low-Synch Gram-Schmidt Projection Schemes for GMRES-AMG and for Moving Mesh Solvers</strong> <br> Stephen Thomas (NREL) <br> <em>In collaboration with Tim Warburton and Anthony Austin, we apply the low-synch classical Gram-Schmidt algorithms recently proposed by Swirydowicz et al (2018) to the least-squares polynomial projection schemes introduced by Fischer (1998). We modify the original projection scheme to instead compute an improved initial guess for a preconditioned GMRES-AMG pressure solver for the incompressible Navier-Stokes equations. For the Nalu Wind model, the GMRES iteration count drops to zero with a relatively small window of previous solutions.</em></td>
+</tr>
+<tr>
+<td>11:00-11:30</td>
+<td><strong>Fast Direct Solvers in MFEM</strong> <br> Pieter Ghysels (LBNL) <br> <em>We present recent improvements in the SuperLU and STRUMPACK sparse direct solvers and preconditioners, which are available from MFEM. Support for GPUs has been improved or added. The preconditioners in STRUMPACK have been improved and tested on an indefinite Maxwell problem using MFEM.</em></td>
+</tr>
+<tr>
+<td>11:30-12:00</td>
+<td><strong>Algebraic Multigrid Preconditioners for Matrix-Free Discretizations</strong> <br> Bruno Turcksin (ORNL) <br> <em>Multigrid preconditioners are very popular preconditioners because of their convergence properties and scalability. Multigrid methods can be divided into geometric multigrid (GMG) and algebraic multigrid (AMG). GMG are based on building different coarser grids and therefore, are excellent as matrix-free preconditioners. The challenge is that GMG cannot be easily applied when the mesh is unstructured. AMG, however, use the entries in the matrix of the system to build coarser grids. This makes AMG more flexible when the matrix is available but it limits their use as matrix-free preconditioners. We surpass the limitation of knowing the matrix entries by basing our AMG on the spectral AMGe method. Unlike other AMG, the spectral AMGe method does not use the matrix of the system. Instead it requires the eigenvectors of the operator evaluated on parts of the domain (agglomerates). This means that, similar to GMG, a mesh is required. However the constraints on how the agglomerates are built are minimal since we do not need to rediscretize the operator on the agglomerates. While at the fine level no matrix associated to the operator is assembled, we still assemble a matrix at the coarsest level in order to use a direct solver.</em></td>
+</tr>
+<tr>
+<td>12:00-12:30</td>
+<td><strong>Recent Progress on Accelerating Algebraic Multigrid Solvers with GPUs</strong> <br> Ruipeng Li (LLNL)</td>
+</tr>
+<tr>
+<td>12:30-1:30</td>
+<td><strong>Lunch</strong></td>
+</tr>
+<tr>
+<td>1:30-6:00</td>
+<td><em>Hike to <a href="https://www.google.com/maps?&z=16&q=37.353642+-80.599434">the Cascades</a></em></td>
+</tr>
+<tr>
+<td></td>
+<td><em>Dinner on your own.</em></td>
+</tr>
+</tbody>
+</table>
 <h4 id="thursday-august-8">Thursday, August 8</h4>
-<ul>
-<li>Internal planning</li>
-<li>Discussions</li>
-<li>Hackathon</li>
-</ul>
+<table>
+<thead>
+<tr>
+<th>Time</th>
+<th>Activity</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>8:00-8:30</td>
+<td><strong>Coffee</strong></td>
+</tr>
+<tr>
+<td>8:30-10:00</td>
+<td>Internal planning</td>
+</tr>
+<tr>
+<td>10:00-10:30</td>
+<td><strong>Coffee Break</strong></td>
+</tr>
+<tr>
+<td>10:30-12:00</td>
+<td>Meetings and discussions</td>
+</tr>
+<tr>
+<td>12:00-1:30</td>
+<td><strong>Lunch</strong></td>
+</tr>
+<tr>
+<td>1:30-2:30</td>
+<td><strong>AMD HIP Tutorial</strong> <br> Noel Chalmers and Damon McDougall (AMD)</td>
+</tr>
+<tr>
+<td>2:30-3:30</td>
+<td>Hackathon</td>
+</tr>
+<tr>
+<td>3:30-4:00</td>
+<td><strong>Coffee Break</strong></td>
+</tr>
+<tr>
+<td>4:00-6:00</td>
+<td>Hackathon</td>
+</tr>
+<tr>
+<td></td>
+<td><em>Dinner on your own.</em></td>
+</tr>
+</tbody>
+</table>
 <h3 id="lodging-options">Lodging Options</h3>
 <p>The <a href="https://www.innatvirginiatech.com/">Inn at Virginia Tech</a> is a 10-minute
 walk from the meeting.  CEED attendees are eligible for a group rate of
