Deploying the CEED website with mkdocs, version 1.0.4 from /home/aaustin/.local/lib/python3.7/site-packages/mkdocs (Python 3.7)

--- a/magma/index.html
+++ b/magma/index.html
@@ -450,7 +450,6 @@ of the <a href="https://www.utk.edu/">University of Tennessee</a>.</p>
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
