--- a/nek/index.html
+++ b/nek/index.html
@@ -384,7 +384,6 @@ industry. We highlight a few of the many applications using Nek5000/NekCEM today
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
