--- a/vis/index.html
+++ b/vis/index.html
@@ -382,7 +382,6 @@ its native <a href="http://glvis.org">GLVis</a> visualization tool, as well as i
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
