--- a/about/index.html
+++ b/about/index.html
@@ -452,7 +452,6 @@ and <a href="http://bootswatch.com/">Bootswatch</a>. Hosted on <a href="http://g
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
