--- a/ap/index.html
+++ b/ap/index.html
@@ -386,7 +386,6 @@ exploration of lightweight MPI and neighborhood collective MPI, and many more.</
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
