--- a/ceed-code/index.html
+++ b/ceed-code/index.html
@@ -418,7 +418,6 @@ mesh refinement support, with minimal impact in the application code.</p>
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
