--- a/ceed2am/index.html
+++ b/ceed2am/index.html
@@ -675,7 +675,6 @@
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
