--- a/ceed3am/index.html
+++ b/ceed3am/index.html
@@ -360,8 +360,6 @@ interested projects.</p>
 The registration fee for the meeting is $60, payable at the door in cash or check upon arrival at
 the meeting. The fee covers snacks and refreshments each day as well as a CEED T-shirt.</p>
 <h3 id="meeting-agenda">Meeting Agenda</h3>
-<p>This schedule is <strong>tentative</strong> and subject to change.  A more complete schedule
-will be posted closer to the meeting date.</p>
 <h4 id="tuesday-august-6">Tuesday, August 6</h4>
 <table>
 <thead>
@@ -397,7 +395,7 @@ will be posted closer to the meeting date.</p>
 </tr>
 <tr>
 <td>11:00-11:30</td>
-<td><strong>OCCA</strong> <br> David Medina (Occalytics)</td>
+<td><strong>OCCA Updates</strong> <br> David Medina (Occalytics)</td>
 </tr>
 <tr>
 <td>11:30-12:00</td>
@@ -445,7 +443,7 @@ will be posted closer to the meeting date.</p>
 </tr>
 <tr>
 <td>5:30-6:00</td>
-<td><strong>Aurora</strong> <br> Scott Parker (ANL)</td>
+<td><strong>Aurora:  Argonne's Exascale System</strong> <br> Scott Parker (ANL) <br> <em>Presentation and discussion of the publicly available information on the Aurora system and approaches to preparing applications.</em></td>
 </tr>
 <tr>
 <td>7:00-9:00</td>
@@ -488,7 +486,7 @@ will be posted closer to the meeting date.</p>
 </tr>
 <tr>
 <td>11:00-11:30</td>
-<td><strong>STRUMPACK</strong> <br> Pieter Ghysels (LBNL)</td>
+<td><strong>Fast Direct Solvers in MFEM</strong> <br> Pieter Ghysels (LBNL) <br> <em>We present recent improvements in the SuperLU and STRUMPACK sparse direct solvers and preconditioners, which are available from MFEM. Support for GPUs has been improved or added. The preconditioners in STRUMPACK have been improved and tested on an indefinite Maxwell problem using MFEM.</em></td>
 </tr>
 <tr>
 <td>11:30-12:00</td>
@@ -496,7 +494,7 @@ will be posted closer to the meeting date.</p>
 </tr>
 <tr>
 <td>12:00-12:30</td>
-<td><strong>HYPRE on GPUs</strong> <br> Ruipeng Li (LLNL)</td>
+<td><strong>Recent Progress on Accelerating Algebraic Multigrid Solvers with GPUs</strong> <br> Ruipeng Li (LLNL)</td>
 </tr>
 <tr>
 <td>12:30-1:30</td>
@@ -543,7 +541,7 @@ will be posted closer to the meeting date.</p>
 </tr>
 <tr>
 <td>1:30-2:30</td>
-<td><strong>AMD HIP Tutorial</strong> <br> Noel Chalmers (AMD)</td>
+<td><strong>AMD HIP Tutorial</strong> <br> Noel Chalmers and Damon McDougall (AMD)</td>
 </tr>
 <tr>
 <td>2:30-3:30</td>
@@ -724,7 +722,6 @@ College of Science and Department of Mathematics.</p></div>
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
