--- a/discr/index.html
+++ b/discr/index.html
@@ -394,7 +394,6 @@ where high-order interpolants tend to exhibit rapid variation.</p>
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
