--- a/fe/index.html
+++ b/fe/index.html
@@ -432,7 +432,6 @@ full-fledged high-order application software ecosystem.</p>
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
