--- a/hw/index.html
+++ b/hw/index.html
@@ -379,7 +379,6 @@ high-order algorithms.</p></div>
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
