--- a/libceed/index.html
+++ b/libceed/index.html
@@ -384,7 +384,6 @@ feedback and collaboration.</em></p>
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
