--- a/libparanumal/index.html
+++ b/libparanumal/index.html
@@ -444,7 +444,6 @@ the <a href="https://github.com/paranumal/libparanumal">libParanumal website</a>
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
