--- a/linalg/index.html
+++ b/linalg/index.html
@@ -393,7 +393,6 @@ libraries like <em><a href="http://www.llnl.gov/casc/hypre">hypre</a></em> and
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
