--- a/meshing/index.html
+++ b/meshing/index.html
@@ -399,7 +399,6 @@ physics-conservative AMR interpolations to meet application needs.</p>
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
