--- a/miniapps/index.html
+++ b/miniapps/index.html
@@ -611,7 +611,6 @@ implement high-order operator evaluation.</p>
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
