--- a/occa/index.html
+++ b/occa/index.html
@@ -375,7 +375,6 @@ the user to write parallel code that is JIT compiled.</p>
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
