--- a/petsc/index.html
+++ b/petsc/index.html
@@ -375,7 +375,6 @@ solvers that work with unassembled representations of linear operators.</p>
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
