--- a/pubs/index.html
+++ b/pubs/index.html
@@ -575,7 +575,6 @@ and the <a href="https://www.anl.gov/articles/co-design-centers-help-make-next-g
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
