--- a/pumi/index.html
+++ b/pumi/index.html
@@ -382,7 +382,6 @@ and <a href="../sw/">Software</a> thrusts.</p>
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
