--- a/thrusts/index.html
+++ b/thrusts/index.html
@@ -373,7 +373,6 @@ discretization libraries, benchmarks and miniapps.</p></div>
         <script src="../js/highlight.pack.js"></script>
         <script src="../js/base.js"></script>
         <script src="../js/retina.min.js"></script>
-        <script src="../search/require.js"></script>
-        <script src="../search/search.js"></script>
+        <script src="../search/main.js"></script>
     </body>
 </html>
