Deploying the CEED website with mkdocs, version 1.0.4 from /home/aaustin/.local/lib/python3.7/site-packages/mkdocs (Python 3.7)

--- a/ceed3am/index.html
+++ b/ceed3am/index.html
@@ -347,18 +347,19 @@
 <p><img alt="CEED Logo" src="../img/logo-150.png" /></p>
 <h3 id="overview">Overview</h3>
 <p>CEED will hold its third annual meeting August 6-8, 2019 at Virginia Tech in
-<a href="https://www.google.com/maps?&amp;z=16.75&amp;q=37.232497,-80.425579">Goodwin Hall 155</a>.
-The goal of the meeting is to report on the progress in the center, deepen
-existing and establish new connections with ECP hardware vendors, ECP software
-technologies projects and other collaborators, plan project activities and
-brainstorm/work as a group to make technical progress. In addition to gathering
-together many of the CEED researchers, the meeting will include representatives
-of the ECP management, hardware vendors, software technology and other
-interested projects.</p>
+<a href="https://www.google.com/maps/place/37.232497+-80.425579/@37.232497,-80.425579,16.75z">Goodwin Hall 155</a>.  The goal of the meeting is to report on the
+progress in the center, deepen existing and establish new connections with ECP
+hardware vendors, ECP software technologies projects and other collaborators,
+plan project activities and brainstorm/work as a group to make technical
+progress. In addition to gathering together many of the CEED researchers, the
+meeting will include representatives of the ECP management, hardware vendors,
+software technology and other interested projects.</p>
 <h3 id="registration">Registration</h3>
-<p>If you plan to attend, <a href="https://forms.gle/1oH9W2aWp74H4BLAA">please <strong>register</strong> no later than <strong>June 30</strong></a>.
-The registration fee for the meeting is $60, payable at the door in cash or check upon arrival at
-the meeting. The fee covers snacks and refreshments each day as well as a CEED T-shirt.</p>
+<p>If you plan to attend, <a href="https://forms.gle/1oH9W2aWp74H4BLAA">please <strong>register</strong> no later than <strong>June
+30</strong></a>.  The registration fee for the
+meeting is $60, payable at the door in cash or check upon arrival at the
+meeting. The fee covers snacks and refreshments each day as well as a CEED
+T-shirt.</p>
 <h3 id="meeting-agenda">Meeting Agenda</h3>
 <h4 id="tuesday-august-6">Tuesday, August 6</h4>
 <table>
@@ -502,7 +503,7 @@ the meeting. The fee covers snacks and refreshments each day as well as a CEED T
 </tr>
 <tr>
 <td>1:30-6:00</td>
-<td><em>Hike to <a href="https://www.google.com/maps?&z=16&q=37.353642+-80.599434">the Cascades</a></em></td>
+<td><em>Hike to <a href="https://www.google.com/maps/place/37.353642+-80.599434/@37.353642,-80.599434,16z">the Cascades</a></em></td>
 </tr>
 <tr>
 <td></td>
@@ -577,8 +578,8 @@ reserve a room at that rate, click
 relatively close to campus.  Attendees can drive (5 minutes; see below for
 information about parking) or take <a href="https://ridebt.org/">Blacksburg Transit</a>
 (BT) to get to the meeting.  The <a href="https://ridebt.org/routes-schedules?route=HWA">HWA</a> and <a href="https://ridebt.org/routes-schedules?route=HWB">HWB</a> bus routes (<a href="http://www.bt4uclassic.org/schedules/hwd.pdf">schedule PDF</a>)
-connect the stop nearest these hotels (<a href="https://www.google.com/maps?&amp;z=17.75&amp;q=37.225419+-80.444962">Plantation/Prices Fork</a>)
-with the one nearest the meeting (<a href="https://www.google.com/maps?&amp;z=17.75&amp;q=37.231440+-80.422008">Old Security Building/Stanger/Old Turner</a>).
+connect the stop nearest these hotels (<a href="https://www.google.com/maps/place/37.225419+-80.444962/@37.225419,-80.444962,17.75z">Plantation/Prices Fork</a>
+with the one nearest the meeting (<a href="https://www.google.com/maps/place/37.231440+-80.422008/@37.231440,-80.422008,17.75z">Old Security Building/Stanger/Old Turner</a>).
 Note that BT will be operating on reduced service schedules during the summer break.</p>
 <ul>
 <li><a href="https://www.ihg.com/holidayinnexpress/hotels/us/en/blacksburg/bcbbg/hoteldetail">Holiday Inn Express &amp; Suites Blacksburg</a></li>
@@ -596,24 +597,21 @@ Bristol.  Proceed on I-81 S for about 25 mi. and then take exit 118-B to US-460
 W toward Christiansburg and Blacksburg.  After about 9 mi., exit to Prices Fork
 Rd., following signs to downtown.  Campus is to the right following the
 intersection at University City Blvd.</p>
-<p><strong>Buses and Shuttles from Roanoke Airport:</strong>  <a href="https://smartwaybus.com/smartway.html">The Smart Way Bus</a>
-runs between Roanoke Airport and the
-<a href="https://www.google.com/maps?&amp;z=17.75&amp;q=37.229697+-80.418135">Squires Student Center</a>
-on campus.  The fare is $4.00 one way, payable to the driver in exact cash.
-The <a href="http://www.roanokeats.com/">Roanoke Airport Transportation Service</a> operates shuttles
-between Roanoke Airport and Blacksburg that can drop passengers off at the Inn
-at Virginia Tech, the Holiday Inn, or the Squires Student Center.  Reservations
-(required) can be made by calling 1-800-288-1958.</p>
+<p><strong>Buses and Shuttles from Roanoke Airport:</strong>  <a href="https://smartwaybus.com/smartway.html">The Smart Way
+Bus</a> runs between Roanoke Airport and
+the <a href="https://www.google.com/maps/place/37.229697+-80.418135/@37.229697,-80.418135,17.75z">Squires Student Center</a> on campus.  The fare is $4.00 one way,
+payable to the driver in exact cash.  The <a href="http://www.roanokeats.com/">Roanoke Airport Transportation
+Service</a> operates shuttles between Roanoke Airport
+and Blacksburg that can drop passengers off at the Inn at Virginia Tech, the
+Holiday Inn, or the Squires Student Center.  Reservations (required) can be
+made by calling 1-800-288-1958.</p>
 <h3 id="parking">Parking</h3>
-<p>Parking is available on campus at the <a href="https://www.google.com/maps?&amp;z=17.75&amp;q=37.2337526+-80.4204459">North End Center
-Garage</a>, from
-which it is about a 5-minute walk to the meeting venue.  There is a daily fee.
-Alternatively, one can acquire (also for a fee) a visitor's campus parking
-permit at the <a href="https://www.google.com/maps?&amp;z=17.75&amp;q=37.230686+-80.434072">Visitor Center</a>.
-Goodwin Hall is immediately adjacent to
-<a href="https://www.google.com/maps?&amp;z=17.75&amp;q=37.231803+-80.424694">Perry Street Lot 3</a>.
-Further information about parking on campus may be found
-<a href="https://parking.vt.edu/content/dam/parking_vt_edu/visitor-parking-info.pdf">here</a>.</p>
+<p>Parking is available on campus at the <a href="https://www.google.com/maps/place/37.233753+-80.420446/@37.233753,-80.420446,17.75z">North End Center Garage</a>,
+from which it is about a 5-minute walk to the meeting venue.  There is a daily fee.
+Alternatively, one can acquire (also for a fee) a visitor's campus parking permit
+at the <a href="https://www.google.com/maps/place/37.230686+-80.434072/@37.230686,-80.434072,17.75z">Visitor Center</a>.  Goodwin Hall is immediately adjacent to
+<a href="https://www.google.com/maps/place/37.231803+-80.424694/@37.231803,-80.424694,17.75z">Perry Street Lot 3</a>.  Further information about parking on campus may be
+found <a href="https://parking.vt.edu/content/dam/parking_vt_edu/visitor-parking-info.pdf">here</a>.</p>
 <h3 id="questions">Questions?</h3>
 <p>For questions, please contact the meeting organizers at <a href="mailto:ceed-meeting@llnl.gov">ceed-meeting@llnl.gov</a>.</p>
 <h3 id="acknowledgements">Acknowledgements</h3>
