Deploying the CEED website with mkdocs, version 1.0.4 from /home/aaustin/.local/lib/python3.7/site-packages/mkdocs (Python 3.7)

--- a/ceed3am/index.html
+++ b/ceed3am/index.html
@@ -448,7 +448,7 @@ T-shirt.</p>
 </tr>
 <tr>
 <td>7:00-9:00</td>
-<td><strong>Conference Dinner</strong> <br> <em>Location TBD</em></td>
+<td><strong>Conference Dinner</strong> <br> <a href="https://zeppolis.com/">Zeppoli's</a></td>
 </tr>
 </tbody>
 </table>
@@ -495,7 +495,7 @@ T-shirt.</p>
 </tr>
 <tr>
 <td>12:00-12:30</td>
-<td><strong>Recent Progress on Accelerating Algebraic Multigrid Solvers with GPUs</strong> <br> Ruipeng Li (LLNL)</td>
+<td><strong>Recent Progress on Accelerating Algebraic Multigrid Solvers with GPUs</strong> <br> Ruipeng Li (LLNL) <br> <em>Modern many-core processors such as graphics processing units (GPUs) are becoming an integral part of many high performance computing systems nowadays. These processors yield enormous raw processing power in the form of massive SIMD parallelism. Accelerating multigrid methods on GPUs has drawn a lot of research attention in recent years. For instance, in recent releases of the HYPRE package, the structured multigrid solvers (SMG, PFMG) have full GPU-support for both the setup and the solve phases, whereas the algebraic multigrid (AMG) solver, namely BoomerAMG, has only its solve phase been ported and the setup can still be computed on CPUs only. In this talk, we will provide an overview of the available GPU acceleration in HYPRE and present our current work on performing AMG setup on GPUs. In particular, we focus on the computation of distributed triple-matrix multiplications (i.e., the Galerkin product), which often represents a significant cost of the entire setup phase of AMG. We will discuss in detail the composing parts of this computation that include several fast GPU sparse matrix kernels and communications between GPUs. The recent results as well as future work will also be included.</em></td>
 </tr>
 <tr>
 <td>12:30-1:30</td>
