Deploying the CEED website with mkdocs, version 1.0.4 from /home/aaustin/.local/lib/python3.7/site-packages/mkdocs (Python 3.7)

--- a/ceed3am/index.html
+++ b/ceed3am/index.html
@@ -471,7 +471,7 @@ T-shirt.</p>
 </tr>
 <tr>
 <td>9:00-9:30</td>
-<td><strong>Devil Ray:  Ray Tracing High Order Meshes for Visualization</strong> <br> Matt Larsen (LLNL) <br> <em>This talk will outline our efforts to develop a portable ray tracing library for high-order meshes. Devil Ray is focused on visualization tasks such as iso-surface and volume rendering.</em></td>
+<td><strong>Devil Ray:  Ray Tracing High Order Meshes for Visualization</strong> <br> Matt Larsen (LLNL) <br> <em>This talk will outline our efforts to develop a portable ray tracing library for high-order meshes. Our technology stack includes RAJA and Umpire, which allows Devil Ray to run on Nvidia and AMD GPUs as well as many-core CPUs. Initially, Devil Ray is focused on image-based visualization tasks such as iso-surface, volume rendering, and slicing, but our long term goals include extracting high-order iso-surfaces. When released, our library will be deployed inside of Ascent, a in situ visualization library.</em></td>
 </tr>
 <tr>
 <td>9:30-10:00</td>
