Deploying the CEED website with mkdocs, version 1.0.4 from /home/aaustin/.local/lib/python3.7/site-packages/mkdocs (Python 3.7)

--- a/ceed3am/index.html
+++ b/ceed3am/index.html
@@ -358,8 +358,8 @@ software technology and other interested projects.</p>
 <p>If you plan to attend, <a href="https://forms.gle/1oH9W2aWp74H4BLAA">please <strong>register</strong> no later than <strong>June
 30</strong></a>.  The registration fee for the
 meeting is $60, payable at the door in cash or check upon arrival at the
-meeting. The fee covers snacks and refreshments each day as well as a CEED
-T-shirt.</p>
+meeting.  Checks should be made payable to the Treasurer of Virginia Tech.  The
+fee covers snacks and refreshments each day as well as a CEED T-shirt.</p>
 <h3 id="meeting-agenda">Meeting Agenda</h3>
 <h4 id="tuesday-august-6">Tuesday, August 6</h4>
 <table>
