Deploying the CEED website with mkdocs, version 1.0.4 from /home/aaustin/.local/lib/python3.7/site-packages/mkdocs (Python 3.7)

--- a/ceed3am/index.html
+++ b/ceed3am/index.html
@@ -361,6 +361,9 @@ meeting is $60, payable at the door in cash or check upon arrival at the
 meeting.  Checks should be made payable to the Treasurer of Virginia Tech.  The
 fee covers snacks and refreshments each day as well as a CEED T-shirt.</p>
 <h3 id="meeting-agenda">Meeting Agenda</h3>
+<p><strong>UPDATE 08/07/2019</strong>:  Due to potentially inclement weather, the hike to the
+Cascades has been postponed to Thursday afternoon.  The AMD HIP tutorial and
+hackathon have been moved to Wednesday afternoon in its place.</p>
 <h4 id="tuesday-august-6">Tuesday, August 6</h4>
 <table>
 <thead>
@@ -498,12 +501,16 @@ fee covers snacks and refreshments each day as well as a CEED T-shirt.</p>
 <td><strong>Recent Progress on Accelerating Algebraic Multigrid Solvers with GPUs</strong> <br> Ruipeng Li (LLNL) <br> <em>Modern many-core processors such as graphics processing units (GPUs) are becoming an integral part of many high performance computing systems nowadays. These processors yield enormous raw processing power in the form of massive SIMD parallelism. Accelerating multigrid methods on GPUs has drawn a lot of research attention in recent years. For instance, in recent releases of the HYPRE package, the structured multigrid solvers (SMG, PFMG) have full GPU-support for both the setup and the solve phases, whereas the algebraic multigrid (AMG) solver, namely BoomerAMG, has only its solve phase been ported and the setup can still be computed on CPUs only. In this talk, we will provide an overview of the available GPU acceleration in HYPRE and present our current work on performing AMG setup on GPUs. In particular, we focus on the computation of distributed triple-matrix multiplications (i.e., the Galerkin product), which often represents a significant cost of the entire setup phase of AMG. We will discuss in detail the composing parts of this computation that include several fast GPU sparse matrix kernels and communications between GPUs. The recent results as well as future work will also be included.</em></td>
 </tr>
 <tr>
-<td>12:30-1:30</td>
+<td>12:30-2:00</td>
 <td><strong>Lunch</strong></td>
 </tr>
 <tr>
-<td>1:30-6:00</td>
-<td><em>Hike to <a href="https://www.google.com/maps/place/37.353642+-80.599434/@37.353642,-80.599434,16z">the Cascades</a></em></td>
+<td>2:00-3:00</td>
+<td><strong>AMD HIP Tutorial</strong> <br> Noel Chalmers and Damon McDougall (AMD)</td>
+</tr>
+<tr>
+<td>3:00-6:00</td>
+<td>Hackathon</td>
 </tr>
 <tr>
 <td></td>
@@ -537,24 +544,12 @@ fee covers snacks and refreshments each day as well as a CEED T-shirt.</p>
 <td>Meetings and discussions</td>
 </tr>
 <tr>
-<td>12:00-1:30</td>
+<td>12:00-2:00</td>
 <td><strong>Lunch</strong></td>
 </tr>
 <tr>
-<td>1:30-2:30</td>
-<td><strong>AMD HIP Tutorial</strong> <br> Noel Chalmers and Damon McDougall (AMD)</td>
-</tr>
-<tr>
-<td>2:30-3:30</td>
-<td>Hackathon</td>
-</tr>
-<tr>
-<td>3:30-4:00</td>
-<td><strong>Coffee Break</strong></td>
-</tr>
-<tr>
-<td>4:00-6:00</td>
-<td>Hackathon</td>
+<td>2:00-6:00</td>
+<td><em>Hike to <a href="https://www.google.com/maps/place/37.353642+-80.599434/@37.353642,-80.599434,16z">the Cascades</a></em></td>
 </tr>
 <tr>
 <td></td>
