--- a/pubs/index.html
+++ b/pubs/index.html
@@ -374,8 +374,11 @@
 <p>CEED-MS29 report: <a href="../docs/ceed-ms29-report.pdf">Improved Support for Parallel Adaptive Simulation in CEED</a>.
 <a href="https://doi.org/10.5281/zenodo.3336420"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3336420.svg" class="doi"></a></p>
 </li>
+<li>
+<p>CEED-MS32 report: <a href="../docs/ceed-ms32-report.pdf">Performance tuning of CEED software and 1st and 2nd wave apps</a>.
+<a href="https://doi.org/10.5281/zenodo.3477618"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3477618.svg" alt="DOI"></a></p>
+</li>
 </ul>
-<hr />
 <h3 id="publications">Publications</h3>
 <h4 id="2019">2019</h4>
 <ol>
