--- a/pubs/index.html
+++ b/pubs/index.html
@@ -376,7 +376,7 @@
 </li>
 <li>
 <p>CEED-MS32 report: <a href="../docs/ceed-ms32-report.pdf">Performance tuning of CEED software and 1st and 2nd wave apps</a>.
-<a href="https://doi.org/10.5281/zenodo.3477618"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3477618.svg" alt="DOI"></a></p>
+<a href="https://doi.org/10.5281/zenodo.3477618"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3477618.svg" class="doi"></a></p>
 </li>
 </ul>
 <h3 id="publications">Publications</h3>
